--- a/CCalc/CreateMealsRoot.storyboard
+++ b/CCalc/CreateMealsRoot.storyboard
@@ -197,17 +197,28 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4VF-1N-upN">
+                                <rect key="frame" x="8" y="44" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="D5p-d6-DFb"/>
+                                </constraints>
+                                <state key="normal" title="Close">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="bvi-ta-5dA" firstAttribute="top" secondItem="2TZ-yo-RyG" secondAttribute="bottom" constant="11" id="4cW-0E-7zK"/>
                             <constraint firstItem="9xg-Or-tHb" firstAttribute="top" secondItem="eNM-tL-GB2" secondAttribute="bottom" id="66e-Av-c5S"/>
                             <constraint firstAttribute="centerX" secondItem="2TZ-yo-RyG" secondAttribute="centerX" id="6X7-13-2e5"/>
                             <constraint firstItem="eNM-tL-GB2" firstAttribute="leading" secondItem="zaK-UU-n85" secondAttribute="leading" id="CR3-RM-qaB"/>
+                            <constraint firstItem="4VF-1N-upN" firstAttribute="leading" secondItem="zaK-UU-n85" secondAttribute="leading" constant="8" id="EoO-FF-F24"/>
                             <constraint firstItem="Fvq-le-BiK" firstAttribute="leading" secondItem="zaK-UU-n85" secondAttribute="leading" constant="8" id="Hfv-S4-UfR"/>
                             <constraint firstAttribute="width" secondItem="eNM-tL-GB2" secondAttribute="width" id="QC0-Ti-rYb"/>
+                            <constraint firstItem="eNM-tL-GB2" firstAttribute="top" secondItem="2TZ-yo-RyG" secondAttribute="bottom" constant="11" id="XTj-O4-vdh"/>
                             <constraint firstItem="Fvq-le-BiK" firstAttribute="top" secondItem="XQu-nv-sWc" secondAttribute="bottom" constant="8" id="ZBe-eO-zIQ"/>
                             <constraint firstItem="2TZ-yo-RyG" firstAttribute="top" secondItem="Fvq-le-BiK" secondAttribute="bottom" constant="8" id="ZMs-Qy-3Uq"/>
+                            <constraint firstItem="4VF-1N-upN" firstAttribute="top" secondItem="Fvq-le-BiK" secondAttribute="bottom" constant="8" id="hMu-ad-LKz"/>
                             <constraint firstAttribute="trailing" secondItem="Fvq-le-BiK" secondAttribute="trailing" constant="8" id="mZ9-b6-SYB"/>
                         </constraints>
                     </view>
