--- a/CCalc/CreateMealsRoot.storyboard
+++ b/CCalc/CreateMealsRoot.storyboard
@@ -133,6 +133,15 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eNM-tL-GB2" userLabel="Section Container">
                                 <rect key="frame" x="0.0" y="79" width="600" height="521"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gE-il-x6a">
+                                        <rect key="frame" x="225" y="479" width="150" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="l4A-2W-72W"/>
+                                        </constraints>
+                                        <state key="normal" title="View Summary">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gwy-jf-lRa" userLabel="Meal Container">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="521"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -150,7 +159,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvi-ta-5dA" userLabel="Misc Container">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="521"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="471"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
@@ -164,13 +173,17 @@
                                     <constraint firstItem="bvi-ta-5dA" firstAttribute="top" secondItem="eNM-tL-GB2" secondAttribute="top" id="AcU-VU-kPd"/>
                                     <constraint firstItem="On1-ys-taf" firstAttribute="top" secondItem="eNM-tL-GB2" secondAttribute="top" id="FQz-Zn-vRU"/>
                                     <constraint firstItem="KmA-gV-feJ" firstAttribute="leading" secondItem="eNM-tL-GB2" secondAttribute="leading" id="Hm4-rw-1jE"/>
+                                    <constraint firstAttribute="bottom" secondItem="4gE-il-x6a" secondAttribute="bottom" constant="12" id="IDX-if-0WX"/>
                                     <constraint firstAttribute="width" secondItem="bvi-ta-5dA" secondAttribute="width" id="Itm-0k-9aY"/>
                                     <constraint firstAttribute="bottom" secondItem="Gwy-jf-lRa" secondAttribute="bottom" id="KUZ-Ie-HFG"/>
                                     <constraint firstItem="On1-ys-taf" firstAttribute="leading" secondItem="eNM-tL-GB2" secondAttribute="leading" id="MbW-v0-QuG"/>
                                     <constraint firstItem="k6r-zb-GQ2" firstAttribute="leading" secondItem="eNM-tL-GB2" secondAttribute="leading" id="Mhv-aq-1oR"/>
                                     <constraint firstAttribute="bottom" secondItem="On1-ys-taf" secondAttribute="bottom" id="Sfe-nj-X2A"/>
                                     <constraint firstAttribute="bottom" secondItem="k6r-zb-GQ2" secondAttribute="bottom" id="Waz-yM-57l"/>
+                                    <constraint firstAttribute="centerX" secondItem="4gE-il-x6a" secondAttribute="centerX" id="dI4-uD-Y4K"/>
                                     <constraint firstItem="KmA-gV-feJ" firstAttribute="width" secondItem="eNM-tL-GB2" secondAttribute="width" id="dKg-O8-9XG"/>
+                                    <constraint firstItem="4gE-il-x6a" firstAttribute="leading" secondItem="eNM-tL-GB2" secondAttribute="leading" constant="150" id="eZE-8a-IaU"/>
+                                    <constraint firstAttribute="trailing" secondItem="4gE-il-x6a" secondAttribute="trailing" constant="150" id="eeT-0Z-PEe"/>
                                     <constraint firstAttribute="bottom" secondItem="KmA-gV-feJ" secondAttribute="bottom" id="fPc-vX-i7V"/>
                                     <constraint firstItem="Gwy-jf-lRa" firstAttribute="top" secondItem="eNM-tL-GB2" secondAttribute="top" id="j3D-Tb-V3e"/>
                                     <constraint firstItem="Gwy-jf-lRa" firstAttribute="leading" secondItem="eNM-tL-GB2" secondAttribute="leading" id="j4x-EE-EpL"/>
@@ -178,7 +191,7 @@
                                     <constraint firstAttribute="trailing" secondItem="k6r-zb-GQ2" secondAttribute="trailing" id="nD6-HS-su0"/>
                                     <constraint firstItem="bvi-ta-5dA" firstAttribute="leading" secondItem="eNM-tL-GB2" secondAttribute="leading" id="oBf-7j-1ej"/>
                                     <constraint firstAttribute="trailing" secondItem="KmA-gV-feJ" secondAttribute="trailing" id="pQe-dJ-Ocu"/>
-                                    <constraint firstAttribute="bottom" secondItem="bvi-ta-5dA" secondAttribute="bottom" id="t4A-f6-BHO"/>
+                                    <constraint firstAttribute="bottom" secondItem="bvi-ta-5dA" secondAttribute="bottom" constant="50" id="t4A-f6-BHO"/>
                                     <constraint firstItem="k6r-zb-GQ2" firstAttribute="top" secondItem="eNM-tL-GB2" secondAttribute="top" id="tho-Fj-BEU"/>
                                     <constraint firstItem="Gwy-jf-lRa" firstAttribute="width" secondItem="eNM-tL-GB2" secondAttribute="width" id="zBY-Hj-z0I"/>
                                 </constraints>
@@ -189,6 +202,8 @@
                                         <exclude reference="AGB-3U-Ru5"/>
                                         <exclude reference="359-E9-c1T"/>
                                         <exclude reference="nD6-HS-su0"/>
+                                        <exclude reference="eZE-8a-IaU"/>
+                                        <exclude reference="eeT-0Z-PEe"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -237,6 +252,7 @@
                         <outlet property="salsaContainer" destination="On1-ys-taf" id="Ucf-qD-agA"/>
                         <outlet property="sectionContainer" destination="eNM-tL-GB2" id="Aeh-QQ-GZU"/>
                         <outlet property="segmentControl" destination="Fvq-le-BiK" id="Ehh-5r-1rE"/>
+                        <outlet property="summaryButton" destination="4gE-il-x6a" id="BkQ-eH-3qd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdd-Bt-y1f" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -558,8 +574,8 @@
         <!--Condiment View Controller-->
         <scene sceneID="thF-e4-ruO">
             <objects>
-                <tableViewController storyboardIdentifier="MiscViewController" id="tt2-Dt-q8A" customClass="CondimentViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="plain" separatorStyle="none" rowHeight="138" sectionHeaderHeight="22" sectionFooterHeight="22" id="4iE-iZ-ATD">
+                <tableViewController storyboardIdentifier="CondimentViewController" id="tt2-Dt-q8A" customClass="CondimentViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="plain" separatorStyle="none" allowsMultipleSelection="YES" rowHeight="138" sectionHeaderHeight="22" sectionFooterHeight="22" id="4iE-iZ-ATD">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -654,24 +670,6 @@
                                             <constraints>
                                                 <constraint firstAttribute="centerY" secondItem="KHe-va-RQR" secondAttribute="centerY" id="0dk-De-kQN"/>
                                                 <constraint firstAttribute="centerX" secondItem="KHe-va-RQR" secondAttribute="centerX" id="Z6R-sS-baq"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="138" id="6tV-tc-Uom">
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6tV-tc-Uom" id="NQo-Dq-0u4">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sour Cream" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDv-hQ-AAv">
-                                                    <rect key="frame" x="225" y="51" width="151" height="36"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="30"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="centerY" secondItem="XDv-hQ-AAv" secondAttribute="centerY" id="CZG-ce-Ueh"/>
-                                                <constraint firstAttribute="centerX" secondItem="XDv-hQ-AAv" secondAttribute="centerX" id="H8G-by-JNV"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
