--- a/CCalc/Load Meals.storyboard
+++ b/CCalc/Load Meals.storyboard
@@ -99,4 +99,5 @@
             <point key="canvasLocation" x="7928" y="-360"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
 </document>
